--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "prestart":"tsc",
-    "start":"node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc-watch --onSuccess \" node ./dist/index.js \" "
+  },
+  "dependencies": {
+    "typescript": "^3.7.4"
+  },
+  "devDependencies": {
+    "tsc-watch": "^4.0.0"
   }
 }
